--- a/NotAnotherAnimeThemeDCSL.theme.css
+++ b/NotAnotherAnimeThemeDCSL.theme.css
@@ -24,15 +24,15 @@
 :root {
     /*
     Change the theme background
-    Default: https://i.imgur.com/j1Z6HVc.jpg
+    Default: https://https://i.imgur.com/43TVzDN.jpeg
     */
-    --background-image: url(https://i.imgur.com/j1Z6HVc.jpg);
+    --background-image: url(https://i.imgur.com/43TVzDN.jpeg);
 
     /*
     Change your friends icon image
-    Default: https://i.imgur.com/63g6Em8.jpg
+    Default: https://https://i.imgur.com/43TVzDN.jpeg
     */
-    --friends-icon: url(https://i.imgur.com/63g6Em8.jpg);
+    --friends-icon: url(https://i.imgur.com/43TVzDN.jpeg);
 
     /*
     Change your friends icon iamge position
